Fixed linspacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ body {
     top: 25%;
     width: 850px;
     font-size: 50px;
-    line-height: 50px;
+    line-height: 55px;
     font-family: Roboto, helvetica, arial, sans-serif;
     font-weight: 500;
 }
